--- a/app/pages/cuahang/taomoi/taomoi.html
+++ b/app/pages/cuahang/taomoi/taomoi.html
@@ -77,15 +77,14 @@
        ba-panel-class="with-scroll">
     
       <div class="add-row-editable-table">
-        <button class="btn btn-primary" ng-click="addSanpham()">Thêm sản phẩm</button>
+        <button class="btn btn-primary" ng-click="addSanpham()" ng-disabled="disableThem">Thêm sản phẩm</button>
       </div>
       <table class="table table-bordered table-hover table-condensed">
         <tr style="font-weight: bold">
           <td style="width:20%">Tên mặt hàng</td>
           <td style="width:10%">Status</td>
-          <td style="width:10%">Số lượng</td>
           <td style="width:10%">Đơn vị</td>
-          <td style="width:20%">Đơn giá</td>
+          <td style="width:10%">Đơn giá</td>
           <td style="width:25%">Thao tác</td>
         </tr>
         <tr ng-repeat="sanpham in thongtincuahang.sanphams">
@@ -103,21 +102,16 @@
           </td>
           <td>
             <!-- editable Soluong (select-remote) -->
-            <span editable-select="sanpham.soluong" e-name="soluong" e-form="rowform" e-ng-options="sl.value as sl.text for sl in soluongs">
-              {{ showSoluong(sanpham) }}
-            </span>
-          </td>
-          <td>
-            <!-- editable Soluong (select-remote) -->
             <span editable-select="sanpham.donvi" e-name="donvi" e-form="rowform" e-ng-options="sl.value as sl.text for sl in donvis">
               {{ showDonvi(sanpham) }}
             </span>
           </td>
-          <td>
+          <td style="text-align:center;">
             <!-- editable Gia (text with validation) -->
-            <span editable-text="sanpham.gia" e-name="gia" e-form="rowform" e-required>
+            <!--<span editable-text="sanpham.gia" e-name="gia" e-form="rowform" e-required>
               {{ sanpham.gia || 'empty' }}
-            </span>
+            </span>-->
+            <button type="button" class="btn btn-info btn-xs" ng-click="setPrice(rowform, $index)">Đặt giá</button>
           </td>
           <td style="white-space: nowrap">
             <!-- form -->
